Fix up broken stylesheet; clean up structure; make search work

--- a/wp-content/themes/brilliance/less/style.less
+++ b/wp-content/themes/brilliance/less/style.less
@@ -122,19 +122,20 @@ h1 {
   font-size: 40px;
 }
 h2 {
-  font-size: 30px;
-}
-h3 {
   margin-bottom: 10px;
-  font-size: 25px;
+  font-size: 30px;
   small {
     font-size: 13px;
     color: @gray-light;
   }
 }
+h3 {
+  margin-bottom: 10px;
+  font-size: 25px;
+}
 h4 {
   font-size: 16px;
-  margin-bottom: 4px;
+  margin-bottom: 9px;
   small {
     font-size: 12px;
     color: #666;
@@ -156,6 +157,12 @@ ul {
     font-weight: normal;
   }
 }
+hr {
+  margin: 19px 0;
+  border: 0;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #fff;
+}
 
 
 // Scaffolding
@@ -163,10 +170,10 @@ ul {
   position: fixed;
   top: 0;
   left: 0;
-  width: 220px;
-  margin: 40px 0 0 40px;
+  width: 160px;
+  margin: 45px 0 0 40px;
   h3 {
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     a {
       font-weight: 200;
       strong {
@@ -174,11 +181,14 @@ ul {
       }
     }
   }
+  h4 {
+    color: @gray-light;
+  }
   ul {
     margin: 0 0 15px;
     list-style: none;
     li {
-      line-height: 15px;
+      line-height: 20px;
       a:hover:after,
       &.current-menu-item a:after {
         content: "\00a0 \2192";
@@ -190,12 +200,11 @@ ul {
   }
 }
 .content {
-  margin: 40px 40px 0 300px;
+  margin: 40px 220px 0 240px;
   max-width: 1024px;
   min-width: 760px;
 }
 .footer {
-  text-shadow: 0 1px 1px rgba(0,0,0,.2);
   p {
     text-align: center;
     margin-bottom: 0;
@@ -229,8 +238,8 @@ ul#stylesheets {
         background: #eee;
       }
     }
-*/
   }
+*/
 }
 
 // Photos
@@ -275,6 +284,7 @@ div.photo {
 }
 
 // Customize forms a bit
+/*
 form.common-form {
   // Inputs, Textareas, Selects
   input[type=text],
@@ -301,6 +311,7 @@ form.common-form {
     }
   }
 }
+*/
 // Search Form
 #search {
   margin: 100px 0 30px;
@@ -308,12 +319,9 @@ form.common-form {
     display: block;
     width: 300px;
     margin: 0 auto;
-    padding: 4px 14px;
-    .sans-serif(normal,15px,1);
+    padding: 5px 14px;
+    .sans-serif(normal,14px,1);
     .border-radius(14px);
-    &:focus {
-      padding: 5px 15px;
-    }
   }
 }
 
